# openai-realtime-api-fastapi-client

./: .env-template  README.md  pyproject.toml  server.py
