[tool.poetry]
name = "openai-realtime-api-fastapi-client"
version = "0.1.0"
description = ""
authors = ["Manuel Saelices <msaelices@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
websockets = "^13.1"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
